force-app/main/default/objects/Meeting_Assignment__c/Meeting_Assignment__c.object-meta.xml
<CustomObject>
    <label>Meeting Assignment</label>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>MA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>