force-app/main/default/objects/Meeting_Assignment__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Meeting Assignments</relationshipLabel>
    <relationshipName>Meeting_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>