force-app/main/default/objects/Meeting_Assignment__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Participant</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Meeting Assignments</relationshipLabel>
    <relationshipName>Meeting_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>